--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <link rel='icon' href='favicon.ico' type='image/x-icon'/>
   </head>
   <body>
-    
+    <div class="header">
+      <nav id="navbar">
+        <ul>
+          <li><a class="links-top" href="#contact">Contact</a></li>
+          <li><a class="links-top" href="#projects">Projects</a></li> 
+          <li><a class="links-top" href="#about">About</a></li>  
+        </ul> 
+      </nav>  
+    </div>
 
 
     <section class="container-1">
